get starship data

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,7 @@
 [default]
 url=https://swapi.tech/
+people_url = https://swapi.tech/people/
+starships_url = https://swapi.tech/starships/
+
+people = people/
+starships = starships/
