--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,6 @@
 [default]
 url=https://swapi.tech/
-people_url = https://swapi.tech/people/
-starships_url = https://swapi.tech/starships/
 
-people = people/
-starships = starships/
+
+people = api/people/
+starships = api/starships/
