revert url changes

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,4 @@
 [default]
 url=https://swapi.tech/
-
-
-people = api/people/
-starships = api/starships/
+people_url=https://swapi.tech/api/people/
+starships_url=https://swapi.tech/api/starships/
