--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# My personal test files
+mytest2.py
+mytest.py
